kubernetes/authservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
spec:
  selector:
    app: auth-app
  ports:
  - protocol: TCP
    port: 8585
    targetPort: 8585
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: authservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
      - name: auth-app
        image: registry.gitlab.com/kv-030.java/authservice:development
        ports:
        - containerPort: 8585
        imagePullPolicy: Always
