kubernetes/fileservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: file-service
spec:
  selector:
    app: file-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: fileservice
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: file-app
    spec:
      containers:
      - name: file-app
        image: registry.gitlab.com/kv-030.java/fileservice:development
        ports:
        - containerPort: 8585
        imagePullPolicy: Always
