kubernetes/mongodb.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo-service
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: bitnami/mongodb:latest
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongodb-persistent-storage
            mountPath: "/bitnami/mongodb"
      volumes:
        - name: mongodb-persistent-storage
          persistentVolumeClaim:
            claimName: mongo-pv-claim
