kubernetes/postgres.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:9.6
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgresql-persistent-storage
            mountPath: "/var/lib/postgresql"
      volumes:
        - name: postgresql-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
