kubernetes/rabbitmq.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbit
  ports:
  - protocol: TCP
    port: 4369
    name: rabbit-port1
    targetPort: 4369
  - protocol: TCP
    port: 5672
    name: rabbit-port2
    targetPort: 5672
  - protocol: TCP
    port: 15672
    name: rabbit-port3
    targetPort: 15672
  - protocol: TCP
    port: 25672
    name: rabbit-port4
    targetPort: 25672
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbit
    spec:
      containers:
      - name: rabbit
        image: bitnami/rabbitmq
        ports:
        - containerPort: 4369
        - containerPort: 5672
        - containerPort: 15672
        - containerPort: 25672
