kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lb-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: '/'
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: auth-service
          servicePort: 8585
      - path: /rabbit
        backend:
          serviceName: rabbitmq
          servicePort: 15672
